--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
                                 <textarea class="form-control" id="image-description" placeholder="Description"></textarea>
                             </div>
                             <button type="submit" class="btn btn-info">Submit</button>
-                            <button type="submit" class="btn btn-warning">Cancel</button>
+                            <button type="button" class="btn btn-warning">Cancel</button>
                     </form>
                 </div>
                 <div class="col-md-3">
-                    <p class="ddd"></p>
+                    <p class="exif-data"></p>
                 </div>
                 <div class="col-md-5">
                     <div id="googleMap" class="hidden"></div>
